Updates some dark mode styles, fixes filter removal

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -60,6 +60,13 @@
     .section-heading {
         color: $white;
     }
+
+    .filter {
+        .tag {
+            background-color: #555;
+            color: $lightblue
+        }
+    }
 }
 
 html, body{
